@@ -45,6 +45,7 @@ https://github.com/elastic/beats/compare/v6.0.0-alpha2...master[Check the HEAD d
 
 - Don't stop with error loading the ES template if the ES output is not enabled. {pull}4436[4436]
 - Fix race condition in internal logging rotator. {pull}4519[4519]
+- Fix issue with loading dashboards to ES 6.0 when .kibana index did not already exist. {issue}4659[4659]
 
 *Filebeat*
 
